PO-8989: Migrate api - get party
