# src/main/java/uk/gov/hmcts/opal/controllers/DefendantAccountApiController.java
@@ -16,6 +16,7 @@ import uk.gov.hmcts.opal.dto.DefendantAccountHeaderSummary;
 import uk.gov.hmcts.opal.dto.GetDefendantAccountAtAGlanceResponse;
 import uk.gov.hmcts.opal.dto.GetDefendantAccountConsolidatedAccountsResult;
 import uk.gov.hmcts.opal.dto.GetDefendantAccountImpositionsResponse;
+import uk.gov.hmcts.opal.dto.GetDefendantAccountPartyResponse;
 import uk.gov.hmcts.opal.dto.UpdateDefendantAccountResponse;
 import uk.gov.hmcts.opal.dto.history.DefendantAccountHistoryResponse;
 import uk.gov.hmcts.opal.generated.model.AddEnforcementRequestDefendantAccount;
@@ -27,6 +28,7 @@ import uk.gov.hmcts.opal.generated.model.ConsolidatedAccountDefendantAccount;
 import uk.gov.hmcts.opal.generated.model.DefendantAccountImpositionsResponseCommon;
 import uk.gov.hmcts.opal.generated.model.GetDefendantAccountHeaderSummary200Response;
 import uk.gov.hmcts.opal.generated.model.GetDefendantAccountHistoryResponse;
+import uk.gov.hmcts.opal.generated.model.GetPartyResponseDefendantAccount;
 import uk.gov.hmcts.opal.generated.model.GetEnforcementStatusResponse;
 import uk.gov.hmcts.opal.generated.model.PostDefendantAccountSearchRequestDefendantAccount;
 import uk.gov.hmcts.opal.generated.model.PostDefendantAccountSearchResponseDefendantAccount;
@@ -35,6 +37,8 @@ import uk.gov.hmcts.opal.generated.model.RemoveEnforcementHoldResponseDefendantA
 import uk.gov.hmcts.opal.generated.model.UpdateDefendantAccountRequestPayload;
 import uk.gov.hmcts.opal.generated.model.UpdateDefendantAccountResponsePayload;
 import uk.gov.hmcts.opal.mapper.history.DefendantAccountHistoryResponseMapper;
+import uk.gov.hmcts.opal.mapper.response.DefendantAccountPartyResponseMapper;
+import uk.gov.hmcts.opal.service.DefendantAccountPartyService;
 import uk.gov.hmcts.opal.service.DefendantAccountPaymentTermsService;
 import uk.gov.hmcts.opal.service.DefendantAccountEnforcementService;
 import uk.gov.hmcts.opal.service.DefendantAccountService;
@@ -52,6 +56,8 @@ public class DefendantAccountApiController implements DefendantAccountApi {
     private final DefendantAccountHistoryResponseMapper defendantAccountHistoryResponseMapper;
     private final ImpositionService impositionService;
     private final DefendantAccountPaymentTermsService defendantAccountPaymentTermsService;
+    private final DefendantAccountPartyService defendantAccountPartyService;
+    private final DefendantAccountPartyResponseMapper defendantAccountPartyResponseMapper;
 
     @Override
     @FeatureToggle(feature = RELEASE_1B, defaultValueProperty = RELEASE_1B_ENABLED_PROPERTY)
@@ -132,6 +138,19 @@ public class DefendantAccountApiController implements DefendantAccountApi {
         log.debug(":GET:getDefendantAccountEnforcementStatus: for defendant id: {}", id);
 
         return buildResponse(defendantAccountService.getEnforcementStatus(id));
+    }
+
+    @Override
+    @FeatureToggle(feature = RELEASE_1B, defaultValueProperty = RELEASE_1B_ENABLED_PROPERTY)
+    public ResponseEntity<GetPartyResponseDefendantAccount> getDefendantAccountParty(
+        Long defendantAccountId, Long defendantAccountPartyId) {
+        log.debug(":GET:getDefendantAccountParty: for accountId={}, partyId={}", defendantAccountId,
+            defendantAccountPartyId);
+
+        GetDefendantAccountPartyResponse response =
+            defendantAccountPartyService.getDefendantAccountParty(defendantAccountId, defendantAccountPartyId);
+
+        return buildResponse(response, defendantAccountPartyResponseMapper.toGeneratedResponse(response));
     }
 
     @Override
